--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>clase de github</title>
 </head>
 <body>
+    <h2>bienvendos a github</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, maiores. Reprehenderit dicta cupiditate earum odit. Omnis quidem asperiores obcaecati officia odit. Distinctio suscipit et commodi, provident soluta sint vitae cum.</p>
 </body>
 </html>
