--- a/index.html
+++ b/index.html
@@ -10,5 +10,12 @@
 <body>
     <h2>bienvendos a github</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, maiores. Reprehenderit dicta cupiditate earum odit. Omnis quidem asperiores obcaecati officia odit. Distinctio suscipit et commodi, provident soluta sint vitae cum.</p>
+    <div>
+        <ul>
+            <li>nombre1</li>
+            <li>nombre2</li>
+            <li>nombre3</li>
+        </ul>
+    </div>
 </body>
 </html>
