--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, maiores. Reprehenderit dicta cupiditate earum odit. Omnis quidem asperiores obcaecati officia odit. Distinctio suscipit et commodi, provident soluta sint vitae cum.</p>
     <div>
         <ul>
-            <li>nombre1</li>
-            <li>nombre2</li>
-            <li>nombre3</li>
+            <li>Home</li>
+            <li>Servicios</li>
+            <li>Nosotros</li>
         </ul>
     </div>
+    <marquee behavior="" direction="Hola a todos"></marquee>
 </body>
 </html>
