--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
             <li>Nosotros</li>
         </ul>
     </div>
-    <marquee behavior="" direction="Hola a todos"></marquee>
+    <marquee behavior="" direction="">Hola a todos</marquee>
 </body>
 </html>
