--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, maiores. Reprehenderit dicta cupiditate earum odit. Omnis quidem asperiores obcaecati officia odit. Distinctio suscipit et commodi, provident soluta sint vitae cum.</p>
     <div>
         <ul>
-            <li>Home</li>
+            <li>Modifico mi lista</li>
             <li>Servicios</li>
             <li>Nosotros</li>
         </ul>
