--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <ul>
             <li>Modifico mi lista</li>
             <li>Servicios</li>
+            <li>Indumentaria</li>
             <li>Nosotros</li>
         </ul>
     </div>
